--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -4,13 +4,12 @@
   url    = {https://spinningup.openai.com/en/latest/spinningup/rl_intro2.html},
   year   = {2018}
 }
-@article{AIAct2024,
-  author  = {European Parliament and Council of the European Union},
-  journal = {Publications Office of the European Union},
-  month   = {6},
-  title   = {Regulation (EU) 2024/1689},
-  url     = {https://eur-lex.europa.eu/legal-content/EN/LSU/?uri=CELEX:32024R1689},
-  year    = {2024}
+@misc{AIAct2024,
+  author = {European Parliament and Council of the European Union},
+  title  = {Regulation (EU) 2024/1689 of the European Parliament and of the Council of 13 June 2024 laying down harmonised rules on artificial intelligence and amending certain Union legislative acts (Artificial Intelligence Act)},
+  year   = {2024},
+  note   = {Official Journal of the European Union, L 2024/1689, 12.7.2024},
+  url    = {https://eur-lex.europa.eu/eli/reg/2024/1689/oj}
 }
 @article{Amirshahi2023,
   abstract  = {In recent years, cryptocurrencies' price prediction has attracted the interest of many people including investors, researchers and practitioners. In this study, we proposed a hybrid model for predicting the daily close price of cryptocurrencies based on different neural networks such as long short-term memory, convolutional neural network and attention mechanism. Using an ensemble of three pre-trained language models, we extracted sentiment of cryptocurrency-related tweets posted between 1 January 2021 and 31 December 2021. We constructed 20 different versions of our model and evaluated their performance on data of 27 most traded cryptocurrencies using a history of previous days' sentiment data along with close prices as input data. The flexible input layer of our model enables different ways of feeding data into the model to adjust it for different cryptocurrencies to obtain better predictions. Our analysis revealed several important findings. We showed that longer sequences of input data achieve most accurate predictions on average. More specifically, using a history of 14- and 21-days' data results in lowest RMSE values on average compared to using a history of 7 days. However, there is no significant difference between the results related to the input sequences with lengths of 14 and 21. In addition, our findings suggest that sentiment data can be useful in predicting prices for more than 70% of the studied cryptocurrencies. Thus, peoples' emotions, opinions, and sentiment that are expressed through their posts on Twitter platform play a significant role in prediction of cryptocurrencies' prices.},
@@ -480,6 +479,13 @@
   author    = {Robert Andrew Martin},
   title     = {PyPortfolioOpt: portfolio optimization in Python},
   journal   = {Journal of Open Source Software}
+}
+@misc{MiFIDII,
+  title  = {Directive 2014/65/EU of the European Parliament and of the Council of 15 May 2014 on markets in financial instruments and amending Directive 2002/92/EC and Directive 2011/61/EU (recast)},
+  year   = {2014},
+  note   = {Official Journal of the European Union, L 173, 12.6.2014, p. 349-496},
+  url    = {https://eur-lex.europa.eu/legal-content/EN/TXT/?uri=CELEX%3A02014L0065-20250117},
+  author = {{European Parliament and Council of the European Union}}
 }
 @article{Millea2021,
   abstract  = {Deep reinforcement learning (DRL) has achieved significant results in many machine learning (ML) benchmarks. In this short survey, we provide an overview of DRL applied to trading on financial markets with the purpose of unravelling common structures used in the trading community using DRL, as well as discovering common issues and limitations of such approaches. We include also a short corpus summarization using Google Scholar. Moreover, we discuss how one can use hierarchy for dividing the problem space, as well as using model-based RL to learn a world model of the trading environment which can be used for prediction. In addition, multiple risk measures are defined and discussed, which not only provide a way of quantifying the performance of various algorithms, but they can also act as (dense) reward-shaping mechanisms for the agent. We discuss in detail the various state representations used for financial markets, which we consider critical for the success and efficiency of such DRL agents. The market in focus for this survey is the cryptocurrency market; the results of this survey are two-fold: firstly, to find the most promising directions for further research and secondly, to show how a lack of consistency in the community can significantly impede research and the development of DRL agents for trading.},
