--- a/report/contents/glossary.tex
+++ b/report/contents/glossary.tex
@@ -210,3 +210,6 @@
 \newacronym{inr}{INR}{Indian Rupee}
 \newacronym{ohlcv}{OHLCV}{Open, High, Low, Close, Volume}
 \newacronym{var}{VaR}{Value at Risk}
+\newacronym{aiact}{AI Act}{Artificial Intelligence Act}
+\newacronym{fca}{FCA}{Financial Conduct Authority}
+\newacronym{mifid}{MiFID II}{Markets in Financial Instruments Directive II}
