--- a/report/contents/issues.tex
+++ b/report/contents/issues.tex
@@ -1,3 +1,12 @@
 \chapter{Legal, Social, Ethical and Professional Issues} \label{ch:issues}
 
-The implementation of \acrfull{drl} algorithms to perform profitable portfolio allocation raises several legal, social, ethical and professional issues that must be considered. The incorporation of post-hoc explainable techniques to understand, interpret and clarify the decision-making process of these algorithms is a crucial step towards addressing these. This chapter will explore these concerns in detail, highlighting remediating circumstances and potential solutions.
+The development and deployment of \acrfull{drl} algorithms to perform profitable portfolio allocation raises several legal, social, ethical and professional issues that must be considered. The incorporation of post-hoc explainable techniques to understand, interpret and clarify the decision-making process of these algorithms is a crucial step towards addressing these. This chapter will explore these concerns in detail, highlighting remediating circumstances and potential solutions.
+
+\section{Legal Issues} \label{sec:legal-issues}
+
+When it comes to the legal ramifications of deploying \acrfull{ml} algorithms in finance, under the \acrfull{eu}'s \acrfull{aiact} \cite{AIAct2024} their use can be classified as high-risk per Article 6 \footnote{https://artificialintelligenceact.eu/article/6/} due to their potential impact on an individuals' economic well-being. Consequently, such systems must comply with the requirements set in Section 2, Articles 9-15 \footnote{https://artificialintelligenceact.eu/section/3-2/}, which outline the obligations for high-risk AI systems, including risk assessment, data governance, and transparency measures. Particularly, to comply with Article 13 \footnote{https://artificialintelligenceact.eu/article/13/}, which outlines that high-risk AI systems must "enable deployers to interpret a system's output", the use of explainability techniques is essential. This ensures that the decision-making process of the algorithm can be understood and justified, thus adhering to the legal requirements set forth by the \acrshort{aiact}.
+
+Additionally, \Gls{algorithmictrading} systems must comply with the \acrlong{eu} directive on \acrfull{mifid} \cite{MiFIDII} and the \acrfull{fca} guidance on \textit{Algorithmic Trading Compliance in Wholesale Markets}. These regulations outline that algorithmic decision-making processes must be subject to risk controls and a governance and oversight framework, as well as robust and consistent development and testing processes, amongst others. 
+
+Consequently, the deployment of this particular implementation of portfolio optimisation using \acrfull{drl} must ensure that it follows adequate testing procedures and implements the necessary safeguards to mitigate potential risks. Moreover, by already providing post-hoc explainability techniques, it ensures that the decision-making process can be interpreted and justified. 
+
