--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -954,3 +954,13 @@
   url       = {https://onlinelibrary.wiley.com/doi/full/10.1002/widm.1519 https://onlinelibrary.wiley.com/doi/abs/10.1002/widm.1519 https://wires.onlinelibrary.wiley.com/doi/10.1002/widm.1519},
   year      = {2023}
 }
+@article{DeFreitas2025,
+  title={Why People Resist Embracing AI The five main obstacles-and how to overcome them},
+  author={De Freitas, Julian},
+  journal={Harvard Business Review},
+  volume={104},
+  number={1-2},
+  pages={52--56},
+  year={2025},
+  publisher={Harvard Business School Publishing Corporation}
+}
