--- a/report/contents/glossary.tex
+++ b/report/contents/glossary.tex
@@ -213,3 +213,4 @@
 \newacronym{aiact}{AI Act}{Artificial Intelligence Act}
 \newacronym{fca}{FCA}{Financial Conduct Authority}
 \newacronym{mifid}{MiFID II}{Markets in Financial Instruments Directive II}
+\newacronym{llm}{LLM}{Large Language Model}
