--- a/report/contents/issues.tex
+++ b/report/contents/issues.tex
@@ -10,3 +10,15 @@ Additionally, \Gls{algorithmictrading} systems must comply with the \acrlong{eu}
 
 Consequently, the deployment of this particular implementation of portfolio optimisation using \acrfull{drl} must ensure that it follows adequate testing procedures and implements the necessary safeguards to mitigate potential risks. Moreover, by already providing post-hoc explainability techniques, it ensures that the decision-making process can be interpreted and justified. 
 
+\section{Social Issues} \label{sec:social-issues}
+
+Despite the recent popularity of \acrfull{ai} systems with the rise of \acrfull{llm}, there is still a significant lack of understanding and trust in these systems. Some of the reasons behind the psychological reasons why people would be hesitant to fully embrace \acrshort{ai} systems include:
+\begin{itemize}
+    \item Black box behaviour, making it difficult for people to understand their decisions.
+    \item Lacking human-like qualities, with a preference in users to interact with the human counterparty.
+    \item Perceived inability of the systems to adapt to new situations and learn from previous mistakes.
+\end{itemize}
+
+For our particular use case, the incorporation of explainability techniques addresses the black box behaviour of the implemented technology. However, there is a difference between generating the explanations and the end-user being able to access and understand them. To bridge this gap, it is essential to provide a user-friendly interface that allows users to easily access the explanations and provides human language descriptions of the explanations. 
+
+% MAYBE: Another important aspect to consider with regards to social issues is the employment impact of automated systems.
