Refine legal, social and ethical sections

--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -42,6 +42,12 @@
   url       = {https://arxiv.org/abs/1910.10045v2},
   year      = {2019}
 }
+@misc{BCSCodeConduct,
+  author = {British Computer Society},
+  title  = {BCS Code of Conduct},
+  url    = {https://www.bcs.org/membership-and-registrations/become-a-member/bcs-code-of-conduct/},
+  year   = {2022}
+}
 @article{Bellemare2017,
   abstract  = {In this paper we argue for the fundamental importance of the value distribution: the distribution of the random return received by a reinforcement learning agent. This is in contrast to the common approach to reinforcement learning which models the expectation of this return, or value. Although there is an established body of literature studying the value distribution, thus far it has always been used for a specific purpose such as implementing risk-aware behaviour. We begin with theoretical results in both the policy evaluation and control settings, exposing a significant distributional instability in the latter. We then use the distributional perspective to design a new algorithm which applies Bellman's equation to the learning of approximate value distributions. We evaluate our algorithm using the suite of games from the Arcade Learning Environment. We obtain both state-of-the-art results and anecdotal evidence demonstrating the importance of the value distribution in approximate reinforcement learning. Finally, we combine theoretical and empirical evidence to highlight the ways in which the value distribution impacts learning in the approximate setting.},
   author    = {Marc G. Bellemare and Will Dabney and Rémi Munos},
@@ -332,6 +338,12 @@
   title  = {What Is Machine Learning (ML)?},
   url    = {https://www.ibm.com/think/topics/machine-learning},
   year   = {2021}
+}
+@misc{IETRules,
+  author = {Institution of Engineering and Technology},
+  title  = {Rules of Conduct},
+  url    = {https://www.theiet.org/about/governance/rules-of-conduct},
+  year   = {2024}
 }
 @article{Jiang2016,
   abstract  = {Portfolio management is the decision-making process of allocating an amount of fund into different financial investment products. Cryptocurrencies are electronic and decentralized alternatives to government-issued money, with Bitcoin as the best-known example of a cryptocurrency. This paper presents a model-less convolutional neural network with historic prices of a set of financial assets as its input, outputting portfolio weights of the set. The network is trained with 0.7 years' price data from a cryptocurrency exchange. The training is done in a reinforcement manner, maximizing the accumulative return, which is regarded as the reward function of the network. Backtest trading experiments with trading period of 30 minutes is conducted in the same market, achieving 10-fold returns in 1.8 months' periods. Some recently published portfolio selection strategies are also used to perform the same back-tests, whose results are compared with the neural network. The network is not limited to cryptocurrency, but can be applied to any other financial markets.},
