--- a/report/contents/glossary.tex
+++ b/report/contents/glossary.tex
@@ -211,6 +211,10 @@
 \newacronym{ohlcv}{OHLCV}{Open, High, Low, Close, Volume}
 \newacronym{var}{VaR}{Value at Risk}
 \newacronym{aiact}{AI Act}{Artificial Intelligence Act}
-\newacronym{fca}{FCA}{Financial Conduct Authority}
 \newacronym{mifid}{MiFID II}{Markets in Financial Instruments Directive II}
+\newacronym{uk}{UK}{United Kingdom}
+\newacronym{fca}{FCA}{Financial Conduct Authority}
 \newacronym{llm}{LLM}{Large Language Model}
+\newacronym{ip}{IP}{Intellectual Property}
+\newacronym{bcs}{BCS}{British Computer Society}
+\newacronym{iet}{IET}{The Institution of Engineering and Technology}
