--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -180,7 +180,7 @@
   year      = {2025}
 }
 @article{DeFreitas2025,
-  title     = {Why People Resist Embracing AI The five main obstacles-and how to overcome them},
+  title     = {Why People Resist Embracing AI: The five main obstacles-and how to overcome them},
   author    = {De Freitas, Julian},
   journal   = {Harvard Business Review},
   volume    = {104},
